stats report scripts

--- a/lectures/Stats-reporting/report_template.qmd
+++ b/lectures/Stats-reporting/report_template.qmd
@@ -1,5 +1,7 @@
 ---
-title: "Untitled"
+author: "Ed Harris"
+date: "2024-09-19"
+title: "Statistical Analysis Report"
 ---
 
 ```{r setup, include=FALSE}
