--- a/lectures/git-md/C7091_Git_GitHub_Quarto.qmd
+++ b/lectures/git-md/C7091_Git_GitHub_Quarto.qmd
@@ -24,10 +24,9 @@ format:
 -   2nd session: Quarto & GitHub Pages
 
 ## Git and GitHub {background-image="images/slide-bg-slate.png"}
-:::: columns
 
+::: columns
 ::: {.column width="60%"}
-
 **Objectives:**
 
 -   What is Git and GitHub?
@@ -36,12 +35,9 @@ format:
 :::
 
 ::: {.column width="40%"}
-
 ![](images/git.png)
-
 :::
-
-::::
+:::
 
 ::: notes
 Has anyone heard of Git or GitHub? Has anyone used Git or GitHub?
@@ -53,25 +49,19 @@ Has anyone heard of Git or GitHub? Has anyone used Git or GitHub?
 
 ## What is Git? {background-image="images/slide-bg-slate.png"}
 
-:::: {layout="[[45,-10,45],[45,-10,45]]"}
-
+::: {layout="[[45,-10,45],[45,-10,45]]"}
 ![](images/version_control.png)
 
 ![](images/track_change.png)
 
 ::: fig-label
-
 Version control
-
 :::
 
 ::: fig-label
-
 Track changes
-
 :::
-
-::::
+:::
 
 ## Why should you care about Git? {background-image="images/slide-bg-slate.png"}
 
@@ -126,23 +116,16 @@ Evaluate changes
 
 ## Git Repository {background-image="images/slide-bg-slate.png"}
 
-:::: columns
-
+::: columns
 ::: {.column width="75%"}
-
 ![](images/repository.png)
-
 :::
 
-:::{.column width="25%" .fragment}
-
-::: {.callout-warning title="WARNING: Do not edit `.git` file!" }
-
+::: {.column .fragment width="25%"}
+::: {.callout-warning title="WARNING: Do not edit `.git` file!"}
 :::
-
 :::
-
-::::
+:::
 
 ## Jargon {background-image="images/slide-bg-slate.png"}
 
@@ -186,9 +169,7 @@ Push your changes from your local repo to the remote repo
 
 ## What is GitHub? {background-image="images/slide-bg-slate.png"}
 
-
-:::: {layout="[[-30,-5,-30,-5,-30],[30,-5,30,-5,30], [30,-5,30,-5,30]]"}
-
+::: {layout="[[-30,-5,-30,-5,-30],[30,-5,30,-5,30], [30,-5,30,-5,30]]"}
 ![](images/user_friendly.png)
 
 ![](images/social_media.png)
@@ -196,29 +177,21 @@ Push your changes from your local repo to the remote repo
 ![](images/popular.png)
 
 ::: fig-label
-
 User-friendly
-
 :::
 
 ::: fig-label
-
 Social & admin
-
 :::
 
 ::: fig-label
-
 Popular & free
-
 :::
-
-::::
+:::
 
 ## How can you use Git or GitHub? {background-image="images/slide-bg-slate.png"}
 
-:::: {layout="[[-30,-5,-30,-5,-30],[30,-5,30,-5,30],[30,-5,30,-5,30]]"}
-
+::: {layout="[[-30,-5,-30,-5,-30],[30,-5,30,-5,30],[30,-5,30,-5,30]]"}
 ![](images/command_line.png)
 
 ![](images/the_web.png)
@@ -226,25 +199,17 @@ Popular & free
 ![](images/computer.png)
 
 ::: fig-label
-
 Git command line
-
 :::
 
-
 ::: fig-label
-
 GitHub web
-
 :::
 
 ::: fig-label
-
 GitHub Desktop
-
 :::
-
-::::
+:::
 
 ## GitHub README.md {background-image="images/slide-bg-slate.png"}
 
@@ -382,30 +347,22 @@ Hyperlinked text
 
 ## Live demo plan! {background-image="images/slide-bg-slate.png"}
 
-:::: columns
-
-::: {.column width="60%"} 
-
+::: columns
+::: {.column width="60%"}
 -   Create your webpage using R and R studio
 -   Make your github repository for you webpage
 -   Make your repository a github page
-
 :::
 
 ::: {.column width="40%"}
-
 ![](images/demo.png)
-
 :::
-
-::::
+:::
 
 ## Important! {background-image="images/slide-bg-slate.png"}
 
-:::: columns
-
-::: {.column width="60%" .fragment} 
-
+::: columns
+::: {.column .fragment width="60%"}
 ``` {.yaml code-line-numbers="|17"}
 ---
 project: 
@@ -426,35 +383,26 @@ format:
   output-dir: docs
 ---
 ```
-
 :::
 
-::: {.column width="40%" .fragment}
-
+::: {.column .fragment width="40%"}
 ![](images/nojekyll.png)
-
 :::
-::::
+:::
 
 ## Turning your Quarto project into a GitHub repo {background-image="images/slide-bg-slate.png"}
 
-:::: columns
-
+::: columns
 ::: {.column width="60%"}
-
 -   Creating a local repo
 -   Publishing your local repo using GitHub desktop
 -   Pull, edit, push, repeat
-
 :::
 
 ::: {.column width="40%"}
-
 ![](images/the_web.png)
-
 :::
-
-::::
+:::
 
 ## Creating your GitHub Page {background-image="images/slide-bg-slate.png"}
 
@@ -480,11 +428,8 @@ Build and deploy
 
 ## Useful links and resources {background-image="images/slide-bg-slate.png"}
 
-
-:::: columns
-
+::: columns
 ::: {.column width="50%"}
-
 [Get Started - Quarto](https://quarto.org/docs/get-started/)
 
 [Quarto Guides](https://quarto.org/docs/guide/)
@@ -492,13 +437,9 @@ Build and deploy
 [Quarto markdown basics](https://quarto.org/docs/authoring/markdown-basics.html)
 
 [GitHub Docs](https://docs.github.com/en)
-
 :::
 
 ::: {.column width="50%"}
-
 ![](images/sleeping_cat.png)
-
 :::
-
-::::
+:::
